--- a/app/views/deep_wells/index.html.erb
+++ b/app/views/deep_wells/index.html.erb
@@ -7,7 +7,7 @@
     <div class="row">
       <div class="col">
         <%= f.label "Deepwell contains:"%>
-        <%= f.search_field :deep_well_name_or_wellLocation_or_driller_name_or_wellCoodinates_or_waterPermitNo_or_depthTotal_or_limit_or_remarks_cont, class:"form-control me-2", placeholder:"Search Deepwell" %>
+        <%= f.search_field :deep_well_name_cont, class:"form-control me-2", placeholder:"Search Deepwell" %>
       </div>
       <div class="col">
         <br>
