--- a/app/views/clients/index.html.erb
+++ b/app/views/clients/index.html.erb
@@ -50,4 +50,11 @@
     </tbody>
   </table>
 
+  <br>
+  <div class="d-flex justify-content-between">
+    <% if Island.count > 10 && @f.count > 10 %>   
+      <%== pagy_bootstrap_nav(@pagy) %>
+    <% end %>
+  </div>
+
 </div>
