--- a/app/views/islands/index.html.erb
+++ b/app/views/islands/index.html.erb
@@ -12,11 +12,11 @@
           <%= f.label "Client Name Contains:" %>
           <%= f.text_field :clients_client_name_cont, :class => "form-control", placeholder:"Search Client" %>
         </div>
-          <div class="col">
-            <br>
-            <%= f.submit "Search", class:"btn btn-outline-primary text-center float-left" %>
-            <%= link_to "Reset Search", request.path, class:"btn btn-light text-center" %>
-          </div>
+        <div class="col">
+          <br>
+          <%= f.submit "Search", class:"btn btn-outline-primary text-center float-left" %>
+          <%= link_to "Reset Search", request.path, class:"btn btn-light text-center" %>
+        </div>
       </div><br>
     <% end %>
   </div>
@@ -24,30 +24,36 @@
 
   <!-- Island Table Start -->
   <table class="table table-hover table-bordered ">
-  <thead>
-    <tr>
-      <th style="width: auto"><%= sort_link(@q, :island_name, "Island", default_order: :asc)%></th>
-      <th style="width: auto;">Number of Clients</th>
-      <th style="width: auto;">Edit</th>
-      <th style="width: auto;">Delete</th>
-    </tr>
-  </thead>
-  <tbody>
-    <% @islands.each do |island| %> 
+    <thead>
       <tr>
-        <td><%= link_to island.island_name, island_clients_path(island)%></td>
-        <td><%= Client.where(:island_id => island).count %></td>
-        <td><%= link_to 'Edit', edit_island_path(island) %></td>
-        <td><%= link_to 'Delete', island, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+        <th style="width: auto"><%= sort_link(@q, :island_name, "Island", default_order: :asc)%></th>
+        <th style="width: auto;">Number of Clients</th>
+        <th style="width: auto;">Edit</th>
+        <th style="width: auto;">Delete</th>
       </tr>
+    </thead>
+    <tbody>
+      <% @islands.each do |island| %> 
+        <tr>
+          <td><%= link_to island.island_name, island_clients_path(island)%></td>
+          <td><%= Client.where(:island_id => island).count %></td>
+          <td><%= link_to 'Edit', edit_island_path(island) %></td>
+          <td><%= link_to 'Delete', island, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+        </tr>
+      <% end %>
+    </tbody>
+  </table>
+
+  <br>
+  <div class="d-flex justify-content-between">
+    <% if Island.count > 10 && @f.count > 10 %>   
+      <%== pagy_bootstrap_nav(@pagy) %>
     <% end %>
-  </tbody>
-</table>
-<br>
-<!-- Island Table End -->
-<button type="button" class="btn text-right float-end" >
-  <%= link_to 'New Island', new_island_path %>
-</button>
+    <!-- Island Table End -->
+    <button type="button" class="btn text-right float-end" >
+      <%= link_to 'New Island', new_island_path %>
+    </button>
+  </div>
 
 
 </div>
