--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -5,7 +5,7 @@
           <% if current_user.first_name == nil || current_user.last_name == nil %>
           <% elsif current_user.first_name.length == 0 || current_user.last_name.length == 0 %>
           <% else %>
-            <p style="padding-top: 17.5px;">Hello, <strong><%= current_user.first_name %> <%= current_user.last_name %></strong>!
+            <p style="padding-top: 17.5px; padding-right: 510px;">Hello, <strong><%= current_user.first_name %> <%= current_user.last_name %></strong>!
           <% end %>
         </p>
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
