--- a/app/views/deep_wells/_form.html.erb
+++ b/app/views/deep_wells/_form.html.erb
@@ -193,8 +193,8 @@
   </table>
       <%= form.file_field :design, class:"form-control", multiple: true %>
   <!-- Deepwell Design Proposal End-->
-  <div class="actions" style="float:left"> <br>
-    <%= form.submit :Submit, class: 'btn btn-primary'%>
+  <div class="actions" style="margin-left: 10px; float: right;"> <br>
+    <%= form.submit :Submit, class: 'btn btn-outline-primary'%>
   </div>
     
     <% end %>
