--- a/app/views/deep_wells/edit.html.erb
+++ b/app/views/deep_wells/edit.html.erb
@@ -1,9 +1,9 @@
-<div class="container">
+<div class="container" style="padding-bottom: 50px">
 	<h1>Edit Deep Well</h1>
 
 	<%= render 'form', deep_well: @deep_well %>
 
-	<div class="actions" style="float:right">
+	<div class="actions" style=" float: right;">
     	<%= link_to "Back", client_deep_well_path , class: 'btn btn-light' %>
   	</div>
   
