--- a/app/views/deep_wells/show.html.erb
+++ b/app/views/deep_wells/show.html.erb
@@ -1,4 +1,4 @@
-<div class="container">
+<div class="container" style="padding-bottom: 50px">
 
   <h2> <%= @deep_well.deep_well_name %> Information </h2>
   <p id="notice"><%= notice %></p>
@@ -175,7 +175,7 @@
 
   <div style="float:right">
 
-        <%= link_to 'Edit', edit_client_deep_well_path([@client, @deep_well]), class: "btn btn-primary" %> 
+        <%= link_to 'Edit', edit_client_deep_well_path([@client, @deep_well]), class: "btn btn-outline-primary" %> 
         <%= link_to 'Back', [@client, :deep_wells], class: "btn btn-light" %>
 
     <br>
