--- a/app/views/clients/index.html.erb
+++ b/app/views/clients/index.html.erb
@@ -1,32 +1,29 @@
 <div class="container">
   <h1><%= @island.island_name%> Clients</h1>
+
   <!-- Search Forms Start -->
   <div>
     <%= search_form_for @q, url: island_clients_path(params[:island_id]) do |f| %>
       <div class="row">
         <div class="col">
-          <%= f.label "Client Name Contains:"%>
+          <%= f.label :client_name_cont%>:
           <%= f.search_field :client_name_cont, class:"form-control me-2", placeholder:"Search Client"%>
         </div>
         <div class="col">
           <%= f.label "DeepWell Name Contains:"%>
           <%= f.text_field :deep_wells_deep_well_name_cont, :class => "form-control", placeholder:"Search Deepwell" %>
+          <div style="float: right; margin-top: 10px; margin-bottom: 20px ;">
+            <%= f.submit "Search", class:"btn btn-outline-primary text-center" %>
+            <%= link_to "Reset Search", request.path, class:"btn btn-light text-center" %>
+          </div>
+
         </div>
-        <div class="col">
-          <br>
-          <%= f.submit "Search", class:"btn btn-outline-primary text-center" %>
-          <%= link_to "Reset Search", request.path, class:"btn btn-light text-center" %>
+
         </div>
-      </div>
     <% end %>
   </div>
   <!-- Search Forms End -->
-
-  <div style="float:left; padding-bottom: 10px; margin-top: 15px;">
-    <%= link_to 'New Client', new_island_client_path, class:"btn btn-primary", style:"float: left"%> 
-    &nbsp;<%= link_to 'Back', islands_path, class:"btn btn-light" %> &nbsp;
-  </div>
-    <br>
+<br>
 
     <table class="table table-hover table-bordered ">
     <thead>
@@ -55,6 +52,10 @@
     <% if Island.count > 10 && @f.count > 10 %>   
       <%== pagy_bootstrap_nav(@pagy) %>
     <% end %>
+    <div style="float:end; padding-bottom: 10px;">
+      <%= link_to 'New Client', new_island_client_path, class:"btn btn-primary"%> 
+      &nbsp;<%= link_to 'Back', islands_path, class:"btn btn-light" %> &nbsp;
+    </div>
   </div>
 
 </div>
