--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -1,7 +1,7 @@
 <nav class="navbar navbar-expand-lg navbar-light" style="background-color: #56C6EA;">
   
   <div class= "container-fluid">
-      <%= link_to image_tag("logo.png", :size => "150x100"), root_path, class:"navbar-brand"%>
+      <%= link_to image_tag("logo.png", :size => "150x100"), root_path, class:"navbar-brand", style:"margin-left: 15px; margin-top: 5px; margin-bottom: 10px;"%>
           <% if current_user.first_name == nil || current_user.last_name == nil %>
           <% elsif current_user.first_name.length == 0 || current_user.last_name.length == 0 %>
           <% else %>
