--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -18,21 +18,17 @@
     <% if user_signed_in?%>
       <%= render 'layouts/navbar' %>
     <% end %>
+    <div class="container" style=" margin-top: 20px; margin-bottom: 50px;">
 
-    <div class="container-fluid">
-      <% if notice %>
-        <%= render 'layouts/alert' %>
-      <% end %>
-      <br>
-      <%= yield %>
+      <div class="container-fluid">
+        <% if notice %>
+          <%= render 'layouts/alert' %>
+        <% end %>
+        <br>
+        <%= yield %>
+      </div>
     </div>
-    
-    <div class="container">
-      <footer>
-        
 
-      </footer>
-    </div>
 
     <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
     
