--- a/app/views/clients/index.html.erb
+++ b/app/views/clients/index.html.erb
@@ -52,7 +52,7 @@
 
   <br>
   <div class="d-flex justify-content-between">
-    <% if Island.count > 10 && @f.count > 10 %>   
+    <% if Client.count > 10 && @f.count > 10 %>   
       <%== pagy_bootstrap_nav(@pagy) %>
     <% end %>
   </div>
