--- a/app/views/deep_wells/edit.html.erb
+++ b/app/views/deep_wells/edit.html.erb
@@ -6,6 +6,8 @@
 	<div class="actions" style="float:right">
     	<%= link_to "Back", client_deep_well_path , class: 'btn btn-light' %>
   	</div>
+
+  	<!-- island_client_path -->
   
 
 </div>
