--- a/app/views/deep_wells/index.html.erb
+++ b/app/views/deep_wells/index.html.erb
@@ -54,7 +54,7 @@
 
   <br>
     <div class="d-flex justify-content-between">
-      <% if Island.count > 10 && @f.count > 10 %>   
+      <% if DeepWell.count > 10 && @f.count > 10 %>   
         <%== pagy_bootstrap_nav(@pagy) %>
       <% end %>
     </div>
