Front end shenanigans

--- a/app/views/deep_wells/_form.html.erb
+++ b/app/views/deep_wells/_form.html.erb
@@ -32,7 +32,7 @@
       </div>
       <div class="field">
         <strong><%= form.label "Date Constructed:" %></strong>
-        <%= form.text_field :dateConstructed, class:"form-control" %>
+        <%= form.date_field :dateConstructed, class:"form-control" %>
       </div>
       <div class="field">
         <strong><%= form.label "Total Depth:" %></strong>
@@ -57,7 +57,7 @@
     <div class="col">
       <div class="field">
         <strong><%= form.label "Water Permit Number:" %></strong>
-        <%= form.date_field :waterPermitNo, class:"form-control" %>
+        <%= form.text_field :waterPermitNo, class:"form-control" %>
       </div>
       <div class="field">
         <strong><%= form.label "Date Granted:" %></strong>
