--- a/app/views/devise/invitations/new.html.erb
+++ b/app/views/devise/invitations/new.html.erb
@@ -15,7 +15,7 @@
       <%= link_to "Back", :back, class: 'btn btn-light'%>
     </div>
     <div class="actions" style="float:right;">
-       <%= f.submit t("devise.invitations.new.submit_button"), class: 'btn btn-primary' %>&nbsp;
+       <%= f.submit t("devise.invitations.new.submit_button"), class: 'btn btn-outline-primary' %>&nbsp;
     </div>
   <% end %>
 </div>
