--- a/app/views/islands/_form.html.erb
+++ b/app/views/islands/_form.html.erb
@@ -16,8 +16,7 @@
 
   <br>
   <div class="actions" style="float:right">
-    <%= form.submit :Submit, class: 'btn btn-primary'%>
+    <%= form.submit :Submit, class: 'btn btn-outline-primary'%>
     <%= link_to 'Back', islands_path, class:"btn btn-light" %>
   </div>
-
 <% end %>
