--- a/app/views/clients/_form.html.erb
+++ b/app/views/clients/_form.html.erb
@@ -17,7 +17,7 @@
 
   <br>
   <div class="actions" style="float:right">
-    <%= form.submit :Submit, class: 'btn btn-primary'%>
+    <%= form.submit :Submit, class: 'btn btn-outline-primary'%>
     <%= link_to 'Back', island_clients_path, class:"btn btn-light" %>
   </div>
 
