--- a/app/views/clients/index.html.erb
+++ b/app/views/clients/index.html.erb
@@ -1,4 +1,4 @@
-<div class="container">
+<div class="container"> 
   <h1><%= @island.island_name%> Clients</h1>
 
   <!-- Search Forms Start -->
@@ -53,7 +53,7 @@
       <%== pagy_bootstrap_nav(@pagy) %>
     <% end %>
     <div style="float:end; padding-bottom: 10px;">
-      <%= link_to 'New Client', new_island_client_path, class:"btn btn-primary"%> 
+      <%= link_to 'New Client', new_island_client_path, class:"btn btn-outline-primary"%> 
       &nbsp;<%= link_to 'Back', islands_path, class:"btn btn-light" %> &nbsp;
     </div>
   </div>
