--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -66,7 +66,7 @@
 
     <br/>
     <div class="d-grid gap-2 d-md-flex justify-content-md-end">
-      <%= f.submit "Update", class:'btn btn-primary .btn-block' %>
+      <%= f.submit "Update", class:'btn btn-outline-primary .btn-block' %>
       <%= link_to "Back", :back, class:'btn btn-light .btn-block' %>
     </div>
   
