--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -8,13 +8,16 @@
         <div class="col">
           <%= f.label :first_name_or_last_name_cont %>:
           <%= f.search_field :first_name_or_last_name_cont , placeholder: "Search First Name", class:'form-control' %>
+          <div style="float: left ; margin-top: 10px; margin-bottom: 20px ;">
+            <%= link_to "User Invite", new_user_invitation_path, class:" btn btn-outline-primary float-end" %>
+          </div>
+
         </div>
         <div class="col" >
           <%= f.label :email_cont %>:
           <%= f.search_field :email_cont , placeholder: "Search Email", class:'form-control' %>
 
           <div style="float: right; margin-top: 10px; margin-bottom: 20px ;">
-
             <%= f.submit "Search", class: 'btn btn-outline-primary ' %>  
             <%= link_to "Reset Search", request.path, class:"btn btn-light " %>
           </div>
@@ -73,4 +76,3 @@
     <% end %>
   </tbody>
 </table>
-  <%= link_to "User Invite", new_user_invitation_path, class:" btn btn-outline-primary float-end" %>
