--- a/app/views/deep_wells/show.html.erb
+++ b/app/views/deep_wells/show.html.erb
@@ -92,8 +92,8 @@
   <table class="table table-bordered ">
     <tbody>
       <tr>
-        <th style="width: 50%"> <strong> Lithologic File </strong></td>
-        <th style="width: 50%"> <strong> Date Uploaded </strong></td>
+        <th style="width: 50%"> Lithologic File</td>
+        <th style="width: 50%"> Date Uploaded</td>
       </tr>
       <tr>
         <td>
