--- a/app/views/deep_wells/show.html.erb
+++ b/app/views/deep_wells/show.html.erb
@@ -1,7 +1,7 @@
 <div class="container" style="padding-bottom: 50px">
 
   <h2> <%= @deep_well.deep_well_name %> Information </h2>
-  <p id="notice"><%= notice %></p>
+  <!-- <p id="notice"><%= notice %></p>-->
    
   <!--Info. Table Start-->
   <table class="table table-bordered" style="">
@@ -43,7 +43,7 @@
           </td>
           <td>
             <p>
-              <strong>LIMIT:</strong>
+              <strong> WATER LIMIT:</strong>
               <%= @deep_well.limit %>
             </p>
           </td>         
