--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -28,7 +28,7 @@
         <br>
 
         <div class="field form-group" style="margin:auto; width: 90%">
-          <%= f.password_field :password, class:"form-control", placeholder:"Password (minimum of 6 characters)", autocomplete: "new-password" %>
+          <%= f.password_field :password, class:"form-control", placeholder:"Password", autocomplete: "new-password" %>
         </div>
 
         <br>
