--- a/app/views/devise/shared/_error_messages.html.erb
+++ b/app/views/devise/shared/_error_messages.html.erb
@@ -6,6 +6,7 @@
                    count: resource.errors.count,
                    resource: resource.class.model_name.human.downcase)
          %>
+         <button type="button" class="btn btn-close" data-bs-dismiss="alert" aria-label="Close"  ></button>
       </h2>
       <ul>
         <% resource.errors.full_messages.each do |message| %>
