--- a/app/views/deep_wells/_form.html.erb
+++ b/app/views/deep_wells/_form.html.erb
@@ -61,7 +61,7 @@
       </div>
       <div class="field">
         <strong><%= form.label "Remarks:" %></strong>
-        <%= form.text_field :remarks , class:"form-control input-large" %>
+        <%= form.text_area :remarks , class:"form-control input-large", style:";" %>
       </div>
     </div>
   </div>
