--- a/app/views/devise/passwords/edit.html.erb
+++ b/app/views/devise/passwords/edit.html.erb
@@ -1,27 +1,32 @@
-<div class="container" style="background-color:#2FB6E1;">
-  <h2>Change your password</h2>
+<body style="background-color:#2FB6E1;">
+  <div class="position-absolute top-50 start-50 translate-middle card" style=" width: 55%; height: auto;  background: #56C6EA; margin: 0 auto;">
+    <div class="card-body" style="margin-left: 20px; margin-right: 20px; margin-bottom: 20px; margin-top: 20px;">
+      <img class=" rounded mx-auto d-block" src="<%= asset_path( 'logo.png' ) %>" alt="Card image cap" width="auto" height="100px">
+      <h2 class="text-center" style="margin-top: 15px;"> Change Your Password</h2>
+        <%= form_for(resource, as: resource_name, url: password_path(resource_name), html: { method: :put }) do |f| %>
+          <%= render "devise/shared/error_messages", resource: resource %>
+          <%= f.hidden_field :reset_password_token %>
+            <div class="field">
+              <strong><%= f.label :password, "New password:" %> </strong>
+              <% if @minimum_password_length %>
+              
+              <% end %>
+                <%= f.password_field :password, autofocus: true, autocomplete: "new-password", class: "form-control", placeholder: "Enter new password" %>
+            </div>
 
-  <%= form_for(resource, as: resource_name, url: password_path(resource_name), html: { method: :put }) do |f| %>
-    <%= render "devise/shared/error_messages", resource: resource %>
-    <%= f.hidden_field :reset_password_token %>
-
-    <div class="field">
-      <%= f.label :password, "New password" %><br />
-      <% if @minimum_password_length %>
-        <em>(<%= @minimum_password_length %> characters minimum)</em><br />
-      <% end %>
-      <%= f.password_field :password, autofocus: true, autocomplete: "new-password" %>
+            <div class="field">
+             <strong><%= f.label :password_confirmation, "Confirm new password" %>:</strong><br />
+              <%= f.password_field :password_confirmation, autocomplete: "new-password" , class: "form-control", placeholder:"Confirm new password" %>
+            </div>
+              <br>
+            <div class="actions text-center" style="margin-bottom: 10px; margin-right: flex;">
+              <%= f.submit "Change My Password", class:'btn btn-light .btn-block' %> 
+            </div>
+            <% end %>
+      <%= render "devise/shared/links" %>      
     </div>
 
-    <div class="field">
-      <%= f.label :password_confirmation, "Confirm new password" %><br />
-      <%= f.password_field :password_confirmation, autocomplete: "new-password" %>
-    </div>
 
-    <div class="actions">
-      <%= f.submit "Change my password" %>
-    </div>
-  <% end %>
+  </div>
 
-  <%= render "devise/shared/links" %>
-</div>
+</body>
