--- a/app/views/islands/index.html.erb
+++ b/app/views/islands/index.html.erb
@@ -50,9 +50,9 @@
       <%== pagy_bootstrap_nav(@pagy) %>
     <% end %>
     <!-- Island Table End -->
-    <button type="button" class="btn text-right float-end" >
-      <%= link_to 'New Island', new_island_path %>
-    </button>
+<!--     <button type="button" class="btn text-right float-end" >
+      <%#= link_to 'New Island', new_island_path %>
+    </button> -->
   </div>
 
 
